fix padding for explanation section on mobile

--- a/assets/style.css
+++ b/assets/style.css
@@ -216,7 +216,7 @@ header {
 }
 
 .project .explanation {
-  padding: 1em;
+  padding: 1em 0;
 }
 
 .project li {
